add rework LogsSourcesParser and minor fixes